--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,11 +1,11 @@
 blank_issues_enabled: false
 contact_links:
   - name: ❓ Questions
-    url: https://github.com/colinwilson/lotusdocs/discussions/new?category=q-a
-    about: Please use the community forum for help and questions regarding Lotus Docs
+    url: https://github.com/zonxorg/zonxdocs/discussions/new?category=q-a
+    about: Please use the community forum for help and questions regarding Zonx Docs
   - name: 💡 Feature requests and ideas
-    url: https://github.com/colinwilson/lotusdocs/discussions/new?category=feature-requests
+    url: https://github.com/zonxorg/zonxdocs/discussions/new?category=feature-requests
     about: Please vote for and post new feature ideas in the community forum
   - name: 📖 Documentation
-    url: https://lotusdocs.dev/docs/
-    about: A great place to find instructions and answers on how to get the most out of your Lotus Docs themed site
+    url: https://zonxdocs.pages.dev/docs/
+    about: A great place to find instructions and answers on how to get the most out of your Zonx Docs themed site
