--- a/exampleSite/hugo.toml
+++ b/exampleSite/hugo.toml
@@ -7,16 +7,16 @@ enableGitInfo = true # N.B. .GitInfo does not currently function with git submod
 defaultContentLanguage = 'en'
 [languages]
   [languages.en]
-    title = "Lotus Docs Example Site"
+    title = "Zonx Docs Example Site"
     languageName = "English"
     weight = 10
   [languages.fr]
-    title = "Lotus Docs Exemple de Site"
+    title = "Zonx Docs Exemple de Site"
     languageName = "Français"
     contentDir = "content/fr"
     weight = 20
   [languages.de]
-    title = "Lotus Docs Beispiel Site"
+    title = "Zonx Docs Beispiel Site"
     languageName = "Deutsch"
     contentDir = "content/de"
     weight = 30
@@ -26,7 +26,7 @@ defaultContentLanguage = 'en'
     extended = true
     min = "0.100.0"
   [[module.imports]]
-    path = "github.com/colinwilson/lotusdocs"
+    path = "github.com/zonxorg/zonxdocs"
     disable = false
   [[module.imports]]
     path = "github.com/gohugoio/hugo-mod-bootstrap-scss/v5"
@@ -59,7 +59,7 @@ defaultContentLanguage = 'en'
   mono_font       = "Fira Code" # Default is System font
 
     [params.footer]
-        copyright = "© :YEAR: Lotus Labs. Built with [**Lotus Docs**](https://github.com/colinwilson/lotusdocs)"
+        copyright = "© :YEAR: Your Company Name. Built with [**Zonx Docs**](https://github.com/zonxorg/zonxdocs)"
         # version = true # includes git commit info
 
     [params.social]
@@ -69,7 +69,7 @@ defaultContentLanguage = 'en'
         # rss = true                    # show rss icon with link
 
     [params.docs] # Parameters for the /docs 'template'
-        title           = "Lotus Docs Example Site"           # default html title for documentation pages/sections
+        title           = "Zonx Docs Example Site"           # default html title for documentation pages/sections
 
         # pathName        = "docs"                            # path name for documentation site | default "docs"
 
@@ -79,10 +79,10 @@ defaultContentLanguage = 'en'
 
         prism           = true                                # enable syntax highlighting via Prism
 
-        prismTheme      = "solarized-light"                           # (optional) - Set theme for PrismJS. Options include: lotusdocs (default), solarized-light, twilight, lucario
+        prismTheme      = "solarized-light"                           # (optional) - Set theme for PrismJS. Options include: zonxdocs (default), solarized-light, twilight, lucario
 
         # gitinfo
-        repoURL         = "https://github.com/colinwilson/lotusdocs.dev"  # Git repository URL for your site [support for GitHub, GitLab, and BitBucket]
+        repoURL         = "https://github.com/zonxorg/zonxdocs.dev"  # Git repository URL for your site [support for GitHub, GitLab, and BitBucket]
         repoBranch      = "release"
         editPage        = true                                # enable 'Edit this page' feature - default false
         lastMod         = true                                # enable 'Last modified' date on pages - default false
@@ -139,7 +139,7 @@ defaultContentLanguage = 'en'
     #     negativeEventName = "Negative Feedback"
     #     positiveFormTitle = "What did you like?"
     #     negativeFormTitle = "What went wrong?"
-    #     successMsg = "Thank you for helping to improve Lotus Docs' documentation!"
+    #     successMsg = "Thank you for helping to improve Zonx Docs' documentation!"
     #     errorMsg = "Sorry! There was an error while attempting to submit your feedback!"
     #     positiveForm = [
     #       ["Accurate", "Accurately describes the feature or option."],
@@ -170,6 +170,6 @@ defaultContentLanguage = 'en'
 
 # [[menu.primary]]
 #     name  = "Community"
-#     url = "https://github.com/colinwilson/lotusdocs/discussions"
+#     url = "https://github.com/zonxorg/zonxdocs/discussions"
 #     identifier = "community"
 #     weight = 30
